--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
